# SCT_correlations

./: .gitignore  CMakeLists.txt  fit2d.C  fit2d.C~  setup.sh  setup.sh~
FitSCurves_bin/: CMakeLists.txt  FitSCurves.cxx
FitSCurves_bin/inc/: getScurvesFromTTree.hh  scurve_fit_collection.hh
FitSCurves_bin/src/: FitSCurves.cxx  getScurvesFromTTree.cc  scurve_fit_collection.cc
ProcessCollection_bin/: CMakeCache.txt  CMakeLists.txt  ProcessCollection.cxx
ProcessCollection_bin/src/: ProcessCollection.cxx
ProcessFile_bin/: CMakeLists.txt  ProcessFile.cxx
ProcessFile_bin/src/: ProcessFile.cxx
SCT_plots/SCT_plots.xcodeproj/: project.pbxproj
TTreeLoader/: ReleaseVectorDef.cc  ReleaseVectorDef.h  TTreeLoader.cc  TTreeLoader.h  fitpoints.cc  fitpoints.h
apix_tel_correlations/: CMakeLists.txt
apix_tel_correlations/src/: apix_tel_correlations.cxx
bin_sz_correlations/: CMakeLists.txt
bin_sz_correlations/src/: run_sz_correlations.cxx
buildRoot5/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
buildRoot5/sct_plot/: Makefile  SCT_plotsDict.cxx  SCT_plotsDict.h  cmake_install.cmake  libSCT_plot.dylib
buildX/: CMakeCache (Copia in conflitto di MacBook Pro 2015-06-21).txt  CMakeCache.txt  cmake_install.cmake
buildX/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake (Copia in conflitto di MacBook Pro 2015-06-21).make  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
buildX/SCT_plot.xcodeproj/: project.pbxproj
buildX/main/: cmake_install.cmake
buildX/sct_plot/: SCT_plotsDict (Copia in conflitto di MacBook Pro 2015-06-21).h  SCT_plotsDict.cxx  SCT_plotsDict.h  cmake_install (Copia in conflitto di MacBook Pro 2015-06-21).cmake  cmake_install.cmake
cmake/: CMakeCache.txt  CXX11.cmake  FindLANDAUGAUSS.cmake  FindLandauGauss.cmake  FindLandauGauss.cmake~  FindROOT.cmake  FindRapidXML.cmake  FindTCLAP.cmake  Makefile  cmake_install.cmake
cmake/main/: Makefile  cmake_install.cmake
cmake/sct_plot/: Makefile  SCT_plotsDict.cxx  SCT_plotsDict.h  cmake_install.cmake
convertAlibava_bin/inc/: treeDUT.h
data/: ABC130_thrCal.txt  DEVICE_1_ASIC_on_Position_7_Jim_350V.xml  DEVICE_1_ASIC_on_Position_7_Jim_400V.xml  GBL_DEVICE_1_ASIC_on_Position_7_Jim_350V.xml  dataFileList.xml  dataFileList.xml~  dataFileList_device1_pos5_150V.xml  dataFileList_device1_pos7_150V.xml~  dataFileList_old.xml  dataFileList_singolo.xml
lib/: Residual_run703.root  dummy1.root  fit2d.C  fit2d.C~  fit688.eps  fit688.root  fit689.eps  fit689.root  fit690.eps  fit690.root  fit691.eps  fit691.root  fit692.eps  fit692.root  fit693.eps  fit693.root  fit694.eps  fit694.root  fit703.eps  fit703.root  fit_prova.C  fitall.root  fitall.eps  libSCT_plot.dylib  output703.root  output703_2.root  p1.eps  p1_sil.eps  plot.eps  plot_sil.eps  residual.root  run.cc  run.cc~  run_cc.d  run_eff_xml.cc  test.root
macros/: Scurve.C  fit2d.C  run.cc  run_residual.cc
main/: CMakeLists.txt  main.cxx  main.cxx~
powershell/: convert_fileList.ps1  scp_files.ps1
run_GBL_bin/: CMakeLists.txt
run_GBL_bin/src/: run_GBL.cxx
sct_plot/: CMakeLists.txt
sct_plot/inc/: SCT_helpers.h  SCT_plotsDict.h  S_Axis.h  cluster.h  factoryDef.hh  output703.root  plane_def.h  plot_save_option_def.h  processorBase.h  s_DrawOption.h  s_cuts.h  s_file_base.h  s_plane.h  s_plane_def.h  s_plot.h  s_plot_collection.h  s_plot_prob.h  s_process_collection.h  s_process_files.h  s_treeCollection.h  sct_default_names.h  sct_event_buffer.h  sct_global.h  sct_plots.h  sct_plots_LinkDef.h  sct_plots_internal.h  sct_plots_lagacy.h  sct_processors.h  sct_runs.h  sct_types.h  treeCollection.h  treeCollection.h~
sct_plot/inc/geometry/: setup_description.hh
sct_plot/inc/internal/: PLaneVsPlane_plots.hh  axis_ref.hh  exceptions.hh  find_coressponding.hh  find_nearest_processor.hh  find_nearest_strip_processor.hh  hit_efficiency.hh  inStripClusterSize.hh  inStripEfficiency.hh  plane.hh  planeAlibava_hit.hh  planeTrack_hits.hh  planeX_Y_hits.hh  plane_hit.hh  plane_hit_healpers.hh  platform.hh  plot2d.hh  plot_collection_impl.hh  plot_corr2d.hh  plot_hit2d.hh  plot_residual_with_charge.hh  plotsBase.hh  residual_efficienct.hh  share_status_emus.hh
sct_plot/inc/processors/: find_nearest.hh  find_nearest_strip.hh  find_second_nearest_strip.hh  modulo.hh
sct_plot/inc/sct_events/: rootCollectionBase.hh  rootEventBase.hh  rootEventRunOutput.hh  rootEvent_Alibava.hh  rootEvent_Track_hits.hh  rootEvent_Track_hits.hh~  rootEvent_X_Y_hits.hh
sct_plot/inc/xml_helpers/: xml_fileList.hh  xml_util.hh
sct_plot/src/: S_plot_collection.cc  processorBase.cc  s_axis.cc  s_cuts.cc  s_drawOptions.cc  s_file.cc  s_plane.cc  s_plane_collection.cc  s_plot_defs.cc  s_plot_defs.cc~  s_plot_prob.cc  s_plots.cc  s_process_collection.cc  s_process_files.cc  s_static_defs.cc  s_treeCollection.cc  sct_analysis.cc  sct_event_buffer.cc  sct_global.cc  sct_plots.cc  sct_plots.cc.orig  sct_plots.cc~  sct_processors.cc  treeCollection.cc
sct_plot/src/internal/: #_strip.cc#  PLaneVsPlane_plots.cc  ProjectOnPixel.cc  clusterSize.cc  convert_to_LCIO.cc  coordinate_transform.cc  correlations.cc  cut_x_y.cc  efficiency_map.cc  event_size.cc  exceptions.cc  find_coressponding.cc  find_nearest _strip.cc  find_nearest.cc  find_nearest_processor.cc  find_nearest_strip.cc  hitMultiplizity.cc  hit_efficiency.cc  hitmap.cc  inStripClusterSize.cc  inStripEfficiency.cc  moduloHitMap.cc  modulo_find_nearest_strip .cc  plane.cc  planeAlibava_hits.cc  planeTrack_hits.cc  planeX_Y_hits.cc  plane_merger.cc  plot2d.cc  plot_a_if_b_has_a_hit.cc  plot_corr2d.cc  plot_hit2d.cc  plot_residual_with_charge.cc  plotsBase.cc  residual.cc  residual_efficienct.cc  rotated_plane.cc
sct_plot/src/processors/: find_nearest_handler.cc  find_nearest_strip_handler.cc  find_second_nearest_strip_handler.cc  modulo_handler.cc  remove_closest.cc
sct_plot/src/sct_events/: rootEventBase.cc  rootEventRunOutput.cc  rootEvent_Alibava.cc  rootEvent_Track_hits.cc  rootEvent_X_Y_hits.cc
src/: local_hit_new.cc  local_hit_new.h  main.cxx
(+30 files in other folders)
