FIND_PACKAGE( ROOT REQUIRED)
find_package(TCLAP REQUIRED)
find_package(LANDAUGAUSS REQUIRED)

INCLUDE_DIRECTORIES(  ${ROOT_INCLUDE_DIR}  ./inc/ ${TCLAP_INCLUDE_DIR} ${SCT_PLOTS_INCLUDES} ${LANDAUGAUS_INCLUDE_DIR})

add_executable(FitSCurves    src/FitSCurves.cxx )
set_property(TARGET FitSCurves   PROPERTY PROJECT_LABEL "bin_FitSCurves") 


target_link_libraries(FitSCurves    ${PROJECT_NAME} ${LANDAUGAUS_LIBRARY})

INSTALL(TARGETS FitSCurves  
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
