FIND_PACKAGE( ROOT REQUIRED)
find_package(TCLAP REQUIRED)
find_package(LANDAUGAUSS REQUIRED)
find_package(RapidXML REQUIRED)


INCLUDE_DIRECTORIES(  ${ROOT_INCLUDE_DIR}  ./inc/ ${TCLAP_INCLUDE_DIR} ${SCT_PLOTS_INCLUDES} ${LANDAUGAUS_INCLUDE_DIR} ${RapidXML_INCLUDE_DIR})

add_executable(ProcessFile    src/ProcessFile.cxx )
set_property(TARGET ProcessFile   PROPERTY PROJECT_LABEL "bin_ProcessFile") 


target_link_libraries(ProcessFile    ${PROJECT_NAME} ${LANDAUGAUS_LIBRARY})

INSTALL(TARGETS ProcessFile  
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
